Fixed Adv Search Button Alignment and realigned page to Grid
fm flexbox

--- a/style.css
+++ b/style.css
@@ -9,36 +9,38 @@
     margin-top : 30px;
 }
 
-.flex-container {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 22px;
+.grid-container {
+    display: grid;
+    grid-template-columns: 180px 50%  auto;
+    gap: 10px;
+    padding: 10px;
 }
 
-.flex-label {
-    flex: 50%;
-    left: 5%;
-    height: 22%;
-}
+.grid-container > div {
+    grid-column-start: 1;
+    grid-column-end: 1;
+    text-align: left;
+  }
 
-.flex-input{
-    flex: 30%;
-    position:absolute;
-    left: 20%;
-    width: 50%;
-    height: 22px;
+.grid-input{
+    grid-column-start: 2;
+    grid-column-end: 2;
+
 }
 
 .adv-button{
-    position: absolute;
     font-weight: bold;
-    right: 29%;
     padding: 8px;
     background-color: #4a8dfb;
     color: white; 
     border: #264684;
     border-radius: 2px;
-    
+    grid-column-start: 2;
+    grid-column-end: 2;
+    width: 150px;
+    margin-right: 0px;
+    margin-left: auto;
+
 
 }
 
